Produtos criados como objetos

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-css": "tailwindcss -i ./assets/css/style.css -o ./dist/style.css --watch"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "gulp": "^5.0.0",
     "gulp-clean-css": "^4.3.0",
-    "gulp-imagemin": "^9.0.0"
+    "gulp-imagemin": "^9.0.0",
+    "tailwindcss": "^3.4.3"
   }
 }
