--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "animate.css": "^4.1.1",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "lodash": "^4.17.21",
